--- a/hw7.ipynb
+++ b/hw7.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:eb84431ca8084cbd92fd8b2a4f3e0ce23305633a1dbdcc4381fab889e0d3562d"
+  "signature": "sha256:b9efe01b3a1373079cc852968a5cf990390cfed9129e9e1e55c514669644274c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -198,8 +198,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Risk aversion implies that a higher risk demands a commensurate higher return which implies lower price \n",
-      "ans.add(False)"
+      "# Risk aversion implies that a higher risk demands a commensurate higher return \n",
+      "ans.add(True)"
      ],
      "language": "python",
      "metadata": {},
@@ -209,7 +209,7 @@
        "output_type": "pyout",
        "prompt_number": 5,
        "text": [
-        "False"
+        "True"
        ]
       }
      ],
@@ -314,8 +314,8 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "# Higher risk demands a high risk premium\n",
-      "ans.add('Higher.')"
+      "# Higher risk demands a high risk premium (i.e. higher yield) which implies lower price.\n",
+      "ans.add('Lower.')"
      ],
      "language": "python",
      "metadata": {},
@@ -325,7 +325,7 @@
        "output_type": "pyout",
        "prompt_number": 8,
        "text": [
-        "'Higher.'"
+        "'Lower.'"
        ]
       }
      ],
@@ -607,10 +607,10 @@
         " 1. Systematic/Market Risk.\n",
         " 2. Indifferent between Y & Z.\n",
         " 3. Portfolio B.\n",
-        " 4. False\n",
+        " 4. True\n",
         " 5. True\n",
         " 6. 0.08\n",
-        " 7. Higher.\n",
+        " 7. Lower.\n",
         " 8. Security C.\n",
         " 9. No.\n",
         "10. Banker 2's MBS has a higher expected return and more risk.\n",
