--- a/hw7.ipynb
+++ b/hw7.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:b9efe01b3a1373079cc852968a5cf990390cfed9129e9e1e55c514669644274c"
+  "signature": "sha256:596907ba55e4eb4f2b83eba5ab683ff95457897bd0cec3f035c229ae868dee41"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -80,8 +80,8 @@
       "z = [            7.5,     7.5,       7.5]  # Returns: Security Z\n",
       "\n",
       "# Compute the mean of each security's returns\n",
-      "m_y = sum(p_i * y_i for p_i, y_i in zip(p, y)) \n",
-      "m_z = sum(p_i * z_i for p_i, z_i in zip(p, z))\n",
+      "m_y = sum(map(lambda p,x: p*x, p, y)) \n",
+      "m_z = sum(map(lambda p,x: p*x, p, z)) \n",
       "\n",
       "for i in [('Y',m_y), ('Z',m_z)]:\n",
       "    print \"Portfolio %s: Mean=%05.2f\" % i \n",
@@ -140,14 +140,14 @@
       "c = [           13.0,     8.0,       7.5]  # Returns: Portfolio C \n",
       "\n",
       "# Compute the mean of each portfolio's returns\n",
-      "m_a = sum(p_i*a_i for p_i, a_i in zip(p, a))\n",
-      "m_b = sum(p_i*b_i for p_i, b_i in zip(p, b))\n",
-      "m_c = sum(p_i*c_i for p_i, c_i in zip(p, c))\n",
+      "m_a = sum(map(lambda p,x: p*x, p, a)) \n",
+      "m_b = sum(map(lambda p,x: p*x, p, b)) \n",
+      "m_c = sum(map(lambda p,x: p*x, p, c)) \n",
       "\n",
       "# Compute the variance of each security's returns\n",
-      "v_a = sum(p_i * (a_i-m_a)**2 for p_i, a_i in zip(p, a)) \n",
-      "v_b = sum(p_i * (b_i-m_b)**2 for p_i, b_i in zip(p, b))\n",
-      "v_c = sum(p_i * (c_i-m_c)**2 for p_i, c_i in zip(p, c))\n",
+      "v_a = sum(map(lambda p,x: p*(x-m_a)**2, p, a)) \n",
+      "v_b = sum(map(lambda p,x: p*(x-m_b)**2, p, b)) \n",
+      "v_c = sum(map(lambda p,x: p*(x-m_c)**2, p, c)) \n",
       "\n",
       "for i in [('A',m_a,v_a), ('B',m_b,v_b), ('C',m_c,v_c)]:\n",
       "    print \"Portfolio %s: Mean=%05.2f, Variance=%04.2f\" % i \n",
@@ -354,14 +354,14 @@
       "c = [           12.0,     8.0,       7.5]  # Returns: Security C \n",
       "\n",
       "# Compute the mean of each security's returns\n",
-      "m_a = sum(p_i*a_i for p_i, a_i in zip(p, a))\n",
-      "m_b = sum(p_i*b_i for p_i, b_i in zip(p, b))\n",
-      "m_c = sum(p_i*c_i for p_i, c_i in zip(p, c))\n",
+      "m_a = sum(map(lambda p,x: p*x, p, a)) \n",
+      "m_b = sum(map(lambda p,x: p*x, p, b)) \n",
+      "m_c = sum(map(lambda p,x: p*x, p, c)) \n",
       "\n",
       "# Compute the variance of each security's returns\n",
-      "v_a = sum(p_i * (a_i-m_a)**2 for p_i, a_i in zip(p, a)) \n",
-      "v_b = sum(p_i * (b_i-m_b)**2 for p_i, b_i in zip(p, b))\n",
-      "v_c = sum(p_i * (c_i-m_c)**2 for p_i, c_i in zip(p, c))\n",
+      "v_a = sum(map(lambda p,x: p*(x-m_a)**2, p, a)) \n",
+      "v_b = sum(map(lambda p,x: p*(x-m_b)**2, p, b)) \n",
+      "v_c = sum(map(lambda p,x: p*(x-m_c)**2, p, c)) \n",
       "\n",
       "for i in [('A',m_a,v_a), ('B',m_b,v_b), ('C',m_c,v_c)]:\n",
       "    print \"Security %s: Mean=%05.2f, Variance=%04.2f\" % i \n",
@@ -484,23 +484,23 @@
       "# Banker 1\n",
       "prob_df_1 = 0.06                   # Probability of a single mortgage default\n",
       "prob_ok_1 = 1 - prob_df_1          # Probability of a single mortgage paying\n",
-      "outcome_1 = [prob_ok_1*prob_ok_1,  # 1. Loan1=OK      and Loan2=OK\n",
+      "probs_1   = [prob_ok_1*prob_ok_1,  # 1. Loan1=OK      and Loan2=OK\n",
       "             prob_ok_1*prob_df_1,  # 2. Loan1=OK      and Loan2=Default\n",
       "             prob_df_1*prob_ok_1,  # 3. Loan1=Default and Loan2=OK\n",
       "             prob_df_1*prob_df_1]  # 4. Loan1=Default and Loan2=Default\n",
-      "mean_1 = sum(p_i * r_i               for p_i, r_i in zip(outcome_1, returns))\n",
-      "var_1  = sum(p_i * (r_i - mean_1)**2 for p_i, r_i in zip(outcome_1, returns))\n",
+      "mean_1 = sum(map(lambda r,p: p*r,             returns, probs_1))\n",
+      "var_1  = sum(map(lambda r,p: p*(r-mean_1)**2, returns, probs_1))\n",
       "print 'Bank %d: Mean=%0.2f, Variance=%0.2f' % (1, mean_1, var_1)\n",
       "\n",
       "# Banker 2\n",
       "prob_df_2 = 0.05                   # Probability of a single mortgage default\n",
       "prob_ok_2 = 1 - prob_df_2          # Probability of a single mortgage paying\n",
-      "outcome_2 = [prob_ok_2,            # 1. Loan1=OK      and Loan2=OK\n",
+      "probs_2   = [prob_ok_2,            # 1. Loan1=OK      and Loan2=OK\n",
       "             0,                    # 2. Loan1=OK      and Loan2=Default\n",
       "             0,                    # 3. Loan1=Default and Loan2=OK\n",
       "             prob_df_2]            # 4. Loan1=Default and Loan2=Default\n",
-      "mean_2 = sum(p_i * r_i               for p_i, r_i in zip(outcome_2, returns))\n",
-      "var_2  = sum(p_i * (r_i - mean_2)**2 for p_i, r_i in zip(outcome_2, returns))\n",
+      "mean_2 = sum(map(lambda r,p: p*r,             returns, probs_2))\n",
+      "var_2  = sum(map(lambda r,p: p*(r-mean_2)**2, returns, probs_2))\n",
       "print 'Bank %d: Mean=%0.2f, Variance=%0.2f' % (2, mean_2, var_2)\n",
       "\n",
       "# Compare returns of Bank 1 and 2\n",
