--- a/hw8.ipynb
+++ b/hw8.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:242d0d100038ed39cea1fa74a1f659f58d9292d81ff1c517a3797410f4ce0e49"
+  "signature": "sha256:1dd6500f28f68cc04631001927614126b2bbcdc4c8cd853ee6f663bc17417e3c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -21,7 +21,10 @@
      "collapsed": false,
      "input": [
       "import finance_formulas as fi # import the basic finace functions\n",
-      "ans = fi.Answers()            # list of computed answers"
+      "ans = fi.Answers()            # list of computed answers\n",
+      "\n",
+      "from operator import mul\n",
+      "from math     import sqrt "
      ],
      "language": "python",
      "metadata": {},
