--- a/hw7.ipynb
+++ b/hw7.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:8c8bf7a60fcb488aa0c0870e0fc7e1bddfe61ede8ae1671f8f281de71f786754"
+  "signature": "sha256:147d2432ee0055bd27b6e744c2f449926ca83e24807faeb14d5a5afcb59e2c11"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,7 +23,7 @@
       "import finance_formulas as fi # import the basic finace functions\n",
       "ans = fi.Answers()            # list of computed answers\n",
       "\n",
-      "from operator import mul\n",
+      "from operator import mul as multiply\n",
       "from math     import sqrt"
      ],
      "language": "python",
@@ -83,8 +83,8 @@
       "z = [            7.5,     7.5,       7.5]  # Returns: Security Z\n",
       "\n",
       "# Compute the mean of each security's returns\n",
-      "m_y = sum(map(mul, p, y)) \n",
-      "m_z = sum(map(mul, p, z)) \n",
+      "m_y = sum(map(multiply, p, y)) \n",
+      "m_z = sum(map(multiply, p, z)) \n",
       "\n",
       "for i in [('Y',m_y), ('Z',m_z)]:\n",
       "    print \"Portfolio %s: Mean=%05.2f\" % i \n",
@@ -143,14 +143,14 @@
       "c = [           13.0,     8.0,       7.5]  # Returns: Portfolio C \n",
       "\n",
       "# Compute the mean of each portfolio's returns\n",
-      "m_a = sum(map(mul, p, a)) \n",
-      "m_b = sum(map(mul, p, b)) \n",
-      "m_c = sum(map(mul, p, c)) \n",
+      "m_a = sum(map(multiply, p, a)) \n",
+      "m_b = sum(map(multiply, p, b)) \n",
+      "m_c = sum(map(multiply, p, c)) \n",
       "\n",
       "# Compute the variance of each security's returns \n",
-      "v_a = sum(map(mul, p, ((x-m_a)**2 for x in a))) \n",
-      "v_b = sum(map(mul, p, ((x-m_b)**2 for x in b)))\n",
-      "v_c = sum(map(mul, p, ((x-m_c)**2 for x in c)))\n",
+      "v_a = sum(map(multiply, p, ((x-m_a)**2 for x in a))) \n",
+      "v_b = sum(map(multiply, p, ((x-m_b)**2 for x in b)))\n",
+      "v_c = sum(map(multiply, p, ((x-m_c)**2 for x in c)))\n",
       "\n",
       "for i in [('A',m_a,v_a), ('B',m_b,v_b), ('C',m_c,v_c)]:\n",
       "    print \"Portfolio %s: Mean=%05.2f, Variance=%04.2f\" % i \n",
@@ -355,14 +355,14 @@
       "c = [           12.0,     8.0,       7.5]  # Returns: Security C \n",
       "\n",
       "# Compute the mean of each portfolio's returns\n",
-      "m_a = sum(map(mul, p, a)) \n",
-      "m_b = sum(map(mul, p, b)) \n",
-      "m_c = sum(map(mul, p, c)) \n",
+      "m_a = sum(map(multiply, p, a)) \n",
+      "m_b = sum(map(multiply, p, b)) \n",
+      "m_c = sum(map(multiply, p, c)) \n",
       "\n",
       "# Compute the variance of each security's returns \n",
-      "v_a = sum(map(mul, p, ((x-m_a)**2 for x in a))) \n",
-      "v_b = sum(map(mul, p, ((x-m_b)**2 for x in b)))\n",
-      "v_c = sum(map(mul, p, ((x-m_c)**2 for x in c)))\n",
+      "v_a = sum(map(multiply, p, ((x-m_a)**2 for x in a))) \n",
+      "v_b = sum(map(multiply, p, ((x-m_b)**2 for x in b)))\n",
+      "v_c = sum(map(multiply, p, ((x-m_c)**2 for x in c)))\n",
       "\n",
       "for i in [('A',m_a,v_a), ('B',m_b,v_b), ('C',m_c,v_c)]:\n",
       "    print \"Security %s: Mean=%05.2f, Variance=%04.2f\" % i \n",
@@ -489,8 +489,8 @@
       "             prob_ok_1*prob_df_1,  # 2. Loan1=OK      and Loan2=Default\n",
       "             prob_df_1*prob_ok_1,  # 3. Loan1=Default and Loan2=OK\n",
       "             prob_df_1*prob_df_1]  # 4. Loan1=Default and Loan2=Default\n",
-      "mean_1 = sum(map(mul, probs_1, returns)) \n",
-      "var_1  = sum(map(mul, probs_1, ((x-mean_1)**2 for x in returns))) \n",
+      "mean_1 = sum(map(multiply, probs_1, returns)) \n",
+      "var_1  = sum(map(multiply, probs_1, ((x-mean_1)**2 for x in returns))) \n",
       "print 'Bank %d: Mean=%0.2f, Variance=%0.2f' % (1, mean_1, var_1)\n",
       "\n",
       "# Banker 2\n",
@@ -500,8 +500,8 @@
       "             0,                    # 2. Loan1=OK      and Loan2=Default\n",
       "             0,                    # 3. Loan1=Default and Loan2=OK\n",
       "             prob_df_2]            # 4. Loan1=Default and Loan2=Default\n",
-      "mean_2 = sum(map(mul, probs_2, returns)) \n",
-      "var_2  = sum(map(mul, probs_2, ((x-mean_2)**2 for x in returns))) \n",
+      "mean_2 = sum(map(multiply, probs_2, returns)) \n",
+      "var_2  = sum(map(multiply, probs_2, ((x-mean_2)**2 for x in returns))) \n",
       "print 'Bank %d: Mean=%0.2f, Variance=%0.2f' % (2, mean_2, var_2)\n",
       "\n",
       "# Compare returns of Bank 1 and 2\n",
