--- a/hw8.ipynb
+++ b/hw8.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1dd6500f28f68cc04631001927614126b2bbcdc4c8cd853ee6f663bc17417e3c"
+  "signature": "sha256:764bedc4fba8d7b9892d2f2d506658c3b1d2f59fc62fbe8660cf2663595651f0"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,8 +23,8 @@
       "import finance_formulas as fi # import the basic finace functions\n",
       "ans = fi.Answers()            # list of computed answers\n",
       "\n",
-      "from operator import mul\n",
-      "from math     import sqrt "
+      "from math import sqrt\n",
+      "def multiply(x,y): return (i*j for i,j in zip(x, y))"
      ],
      "language": "python",
      "metadata": {},
