--- a/hw8.ipynb
+++ b/hw8.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:764bedc4fba8d7b9892d2f2d506658c3b1d2f59fc62fbe8660cf2663595651f0"
+  "signature": "sha256:0cc398c05362f1d02b115bf62e978acd59a0a8d8259802986c94f3de6daa042b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -24,7 +24,7 @@
       "ans = fi.Answers()            # list of computed answers\n",
       "\n",
       "from math import sqrt\n",
-      "def multiply(x,y): return (i*j for i,j in zip(x, y))"
+      "def dot(x, y): return sum(i*j for i,j in zip(x,y))"
      ],
      "language": "python",
      "metadata": {},
