--- a/hw7.ipynb
+++ b/hw7.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:982208162d76aa7bdcba683e68680fce06d277ef1fa6df0e64b2e637f9bf9528"
+  "signature": "sha256:3f0ac870d5a529b4a651ee2919a8791bf56800b3429be61d5d4ebbd3ab27f05b"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,8 +23,10 @@
       "import finance_formulas as fi # import the basic finace functions\n",
       "ans = fi.Answers()            # list of computed answers\n",
       "\n",
-      "from math import sqrt\n",
-      "def dot(x,y): return sum(i*j for i,j in zip(x,y))"
+      "from math     import sqrt\n",
+      "from operator import mul\n",
+      "\n",
+      "def dot(x,y): return sum(map(mul,x,y))"
      ],
      "language": "python",
      "metadata": {},
