--- a/hw8.ipynb
+++ b/hw8.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f18e461fdeb5ffb54e1b0fd517fb84adbb3c30b78ed6c3540e7d88700982e114"
+  "signature": "sha256:2563c748acd8707654b0e0bc2dd8f503062a3b41ca894e1405467ec015fb8479"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -23,8 +23,10 @@
       "import finance_formulas as fi # import the basic finace functions\n",
       "ans = fi.Answers()            # list of computed answers\n",
       "\n",
-      "from math import sqrt\n",
-      "def dot(x,y): return sum(i*j for i,j in zip(x,y))"
+      "from math     import sqrt\n",
+      "from operator import mul\n",
+      "\n",
+      "def dot(x,y): return sum(map(mul,x,y))"
      ],
      "language": "python",
      "metadata": {},
