--- a/hw7.ipynb
+++ b/hw7.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:95426410eb268c0348776548c0cc2073864f8ae46d5622f8cacec1ac13328a9f"
+  "signature": "sha256:7a58d852965df109d31f43e6e9c05326cc2a1f22420aedd1cdba0bff137daef9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -150,9 +150,9 @@
       "m_c = dot(p, c) \n",
       "\n",
       "# Compute the variance of each security's returns \n",
-      "v_a = dot(p, ((x-m_a)**2 for x in a))\n",
-      "v_b = dot(p, ((x-m_b)**2 for x in b))\n",
-      "v_c = dot(p, ((x-m_c)**2 for x in c))\n",
+      "v_a = dot(p, ((i-m_a)**2 for i in a))\n",
+      "v_b = dot(p, ((i-m_b)**2 for i in b))\n",
+      "v_c = dot(p, ((i-m_c)**2 for i in c))\n",
       "\n",
       "for i in [('A',m_a,v_a), ('B',m_b,v_b), ('C',m_c,v_c)]:\n",
       "    print \"Portfolio %s: Mean=%05.2f, Variance=%04.2f\" % i \n",
@@ -362,9 +362,9 @@
       "m_c = dot(p, c) \n",
       "\n",
       "# Compute the variance of each security's returns \n",
-      "v_a = dot(p, ((x-m_a)**2 for x in a))\n",
-      "v_b = dot(p, ((x-m_b)**2 for x in b))\n",
-      "v_c = dot(p, ((x-m_c)**2 for x in c))\n",
+      "v_a = dot(p, ((i-m_a)**2 for i in a))\n",
+      "v_b = dot(p, ((i-m_b)**2 for i in b))\n",
+      "v_c = dot(p, ((i-m_c)**2 for i in c))\n",
       "\n",
       "for i in [('A',m_a,v_a), ('B',m_b,v_b), ('C',m_c,v_c)]:\n",
       "    print \"Security %s: Mean=%05.2f, Variance=%04.2f\" % i \n",
@@ -492,7 +492,7 @@
       "             prob_df_1*prob_ok_1,  # 3. Loan1=Default and Loan2=OK\n",
       "             prob_df_1*prob_df_1]  # 4. Loan1=Default and Loan2=Default\n",
       "mean_1 = dot(probs_1, returns)\n",
-      "var_1  = dot(probs_1, ((y-mean_1)**2 for y in returns))\n",
+      "var_1  = dot(probs_1, ((i-mean_1)**2 for i in returns))\n",
       "print 'Bank %d: Mean=%0.2f, Variance=%0.2f' % (1, mean_1, var_1)\n",
       "\n",
       "# Banker 2\n",
@@ -503,7 +503,7 @@
       "             0,                    # 3. Loan1=Default and Loan2=OK\n",
       "             prob_df_2]            # 4. Loan1=Default and Loan2=Default\n",
       "mean_2 = dot(probs_2, returns)\n",
-      "var_2  = dot(probs_2, ((y-mean_2)**2 for y in returns))\n",
+      "var_2  = dot(probs_2, ((i-mean_2)**2 for i in returns))\n",
       "print 'Bank %d: Mean=%0.2f, Variance=%0.2f' % (2, mean_2, var_2)\n",
       "\n",
       "# Compare returns of Bank 1 and 2\n",
