--- a/hw7.ipynb
+++ b/hw7.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7a58d852965df109d31f43e6e9c05326cc2a1f22420aedd1cdba0bff137daef9"
+  "signature": "sha256:1314d4a0510dbd30a27a01f77efc064ffd3de7cb7a0b26bb40220d7f452d2aec"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -622,6 +622,14 @@
       }
      ],
      "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
     }
    ],
    "metadata": {}
